[gd_scene load_steps=6 format=1]

[ext_resource path="res://Graphics/Tiles/tileLava.png" type="Texture" id=1]
[ext_resource path="res://Scripts/tile.gd" type="Script" id=2]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "uniform color modulate=color(0.2,0.4,1.0,0.8);

vec4 col = tex(TEXTURE,UV);

COLOR = col*modulate;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/modulate = Color( 0.631373, 0.631373, 0.701961, 1 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -19.9126, -18.6058, 0.0800934, -27.9218, 19.9681, -18.3965, 19.7588, 1.4916, -0.0245819, 10.3889, -20.0173, 0.444862 )

[node name="Type_0" type="Sprite"]

material/material = SubResource( 2 )
transform/pos = Vector2( -3.27884, 0 )
transform/scale = Vector2( 1.16394, 1 )
texture = ExtResource( 1 )
region_rect = Rect2( 120, 54, 40, 54 )
script/script = ExtResource( 2 )
type = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -19.9126, -18.6058, 0.0800934, -27.9218, 19.9681, -18.3965, 19.7588, 1.4916, -0.0245819, 10.3889, -20.0173, 0.444862 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[connection signal="mouse_enter" from="Area2D" to="." method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="Area2D" to="." method="_on_Area2D_mouse_exit"]


