[gd_scene load_steps=3 format=1]

[ext_resource path="res://Graphics/Tiles/fullTiles.png" type="Texture" id=1]
[ext_resource path="res://Scripts/tile.gd" type="Script" id=2]

[node name="Type_1" type="Sprite"]

texture = ExtResource( 1 )
region = true
region_rect = Rect2( 120, 162, 40, 54 )
script/script = ExtResource( 2 )
type = 1


